samples/_failures_safe/1761072242_853bac_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bb058bd3.c: In function ‘main’:
./samples/SAFE/__tmp_bb058bd3.c:152:5: error: expected declaration or statement at end of input
  152 |     if (fgets(input_text, sizeof(input_text), stdin) == NULL) {
      |     ^~
./samples/SAFE/__tmp_bb058bd3.c:152:5: error: expected declaration or statement at end of input
